--- a/app/vviews/admin/html/navbar.ejs
+++ b/app/vviews/admin/html/navbar.ejs
@@ -10,13 +10,13 @@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown user-menu">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                <img src="adminlte/images/default-user.jpg" class="user-image img-circle elevation-2" alt="User Image">
+                <img src="https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/296823838_1195016124677032_1056191576717981253_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SPpBKmF5DxMAX8QJt0g&tn=AFVsqyJQA7ank06i&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfACkEnIIMHyvlMqlyYS7UTv8Qjolu1KOM28qyLWcZBIvw&oe=6364D273" class="user-image img-circle elevation-2" alt="User Image">
                 <span class="d-none d-md-inline">Danh</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <!-- User image -->
                 <li class="user-header bg-info">
-                    <img src="adminlte/images/default-user.jpg" class="img-circle elevation-2" alt="User Image">
+                    <img src="https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/296823838_1195016124677032_1056191576717981253_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SPpBKmF5DxMAX8QJt0g&tn=AFVsqyJQA7ank06i&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfACkEnIIMHyvlMqlyYS7UTv8Qjolu1KOM28qyLWcZBIvw&oe=6364D273" class="img-circle elevation-2" alt="User Image">
 
                     <p>Danh <small>admin</small></p>
                 </li>
