--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -59,20 +59,20 @@
 
 <aside class="main-sidebar sidebar-dark-info elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <!-- <a href="index3.html" class="brand-link">
         <img src="adminlte/images/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">DANH</span>
-    </a>
+    </a> -->
 
     <!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="adminlte/images/default-user.jpg" class="img-circle elevation-2" alt="User Image">
+                <img src="https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/296823838_1195016124677032_1056191576717981253_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SPpBKmF5DxMAX8QJt0g&tn=AFVsqyJQA7ank06i&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfACkEnIIMHyvlMqlyYS7UTv8Qjolu1KOM28qyLWcZBIvw&oe=6364D273" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Admin DANH</a>
+                <a href="#" class="d-block">Danh</a>
             </div>
         </div>
 
