--- a/app/vviews/ecommerce/elements/bestseller.ejs
+++ b/app/vviews/ecommerce/elements/bestseller.ejs
@@ -20,7 +20,7 @@
                                     <%- imageMulti(items.images, folderUpload) %>  
                                 </a>
                                 <!-- Start product button -->
-                                <form class="variants add" action="#" onclick="window.location.href=''"
+                                <form class="variants add" action="#" onclick="window.location.href='/add/<%= items.id %>'"
                                     method="post">
                                     <button class="btn btn-addto-cart" type="button" tabindex="0">ADD TO CARD</button>
                                 </form>
