--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -214,7 +214,7 @@
                     class="money">$748.00</span></span>
               </div>
               <div class="buttonSet text-center">
-                <a href="/gio-hang" class="btn btn-secondary btn--small">Giỏ Hàng</a>
+                <a href="/cart" class="btn btn-secondary btn--small">Giỏ Hàng</a>
                 <a href="/thanh-toan" class="btn btn-secondary btn--small">Thanh Toán</a>
               </div>
             </div>
