--- a/app/vviews/admin/html/footer.ejs
+++ b/app/vviews/admin/html/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="main-footer text-sm">
-    <strong>Copyright © 2020 <a href="">Danh</a>.</strong>
+    <strong>Copyright © 2022 <a href="">HuuDanhNguyen</a>.</strong>
     <!-- All rights reserved. -->
     <div class="float-right d-none d-sm-inline-block">
         <!-- <b>Hotline 1:</b> 090 5744 470
