--- a/app/vviews/ecommerce/pages/cart/index.ejs
+++ b/app/vviews/ecommerce/pages/cart/index.ejs
@@ -3,32 +3,29 @@
     	<!--Page Title-->
     	<div class="page section-header text-center">
 			<div class="page-title">
-        		<div class="wrapper"><h1 class="page-width">Shopping Cart</h1></div>
+        		<div class="wrapper"><h1 class="page-width">Giỏ Hàng</h1></div>
       		</div>
 		</div>
         <!--End Page Title-->
         
         <div class="container">
         	<div class="row">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
-                	<div class="alert alert-success text-uppercase" role="alert">
-						<i class="icon anm anm-truck-l icon-large"></i> &nbsp;<strong>Congratulations!</strong> You've got free shipping!
-					</div>
+                <div class="col-12 col-sm-12 col-md-8 col-lg-8 main-col">
                 	<form action="#" method="post" class="cart style2">
                 		<table>
                             <thead class="cart__row cart__header">
                                 <tr>
-                                    <th colspan="2" class="text-center">Product</th>
-                                    <th class="text-center">Price</th>
-                                    <th class="text-center">Quantity</th>
-                                    <th class="text-right">Total</th>
+                                    <th colspan="2" class="text-center">Tên Sản Phẩm</th>
+                                    <th class="text-center">Giá</th>
+                                    <th class="text-center">Số Lượng</th>
+                                    <th class="text-right">Tổng Cộng</th>
                                     <th class="action">&nbsp;</th>
                                 </tr>
                             </thead>
                     		<tbody>
                                 <tr class="cart__row border-bottom line1 cart-flex border-top">
                                     <td class="cart__image-wrapper cart-flex-item">
-                                        <a href="#"><img class="cart__image" src="/frontend/assets/images/product-images/product-image30.jpg" alt="Elastic Waist Dress - Navy / Small"></a>
+                                        <a href="#"><img class="cart__image" src="/frontend/assets/images/product-images/product-image1.jpg" alt="Elastic Waist Dress - Navy / Small"></a>
                                     </td>
                                     <td class="cart__meta small--text-left cart-flex-item">
                                         <div class="list-view-item__title">
@@ -56,96 +53,27 @@
                                     </td>
                                     <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
                                 </tr>
-                                <tr class="cart__row border-bottom line1 cart-flex border-top">
-                                    <td class="cart__image-wrapper cart-flex-item">
-                                        <a href="#"><img class="cart__image" src="/frontend/assets/images/product-images/home7-product5.jpg" alt="3/4 Sleeve Kimono Dress"></a>
-                                    </td>
-                                    <td class="cart__meta small--text-left cart-flex-item">
-                                        <div class="list-view-item__title">
-                                            <a href="#">3/4 Sleeve Kimono Dress</a>
-                                        </div>
-                                        <div class="cart__meta-text">
-                                            Color: Gray<br>Size: Large<br>
-                                        </div>
-                                    </td>
-                                    <td class="cart__price-wrapper cart-flex-item">
-                                        <span class="money">$735.00</span>
-                                    </td>
-                                    <td class="cart__update-wrapper cart-flex-item text-right">
-                                        <div class="cart__qty text-center">
-                                            <div class="qtyField">
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="icon icon-minus"></i></a>
-                                                <input class="cart__qty-input qty" type="text" name="updates[]" id="qty" value="1" pattern="[0-9]*">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="icon icon-plus"></i></a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right small--hide cart-price">
-                                        <div><span class="money">$735.00</span></div>
-                                    </td>
-                                    <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
-                                </tr>
-                                <tr class="cart__row border-bottom line1 cart-flex border-top">
-                                    <td class="cart__image-wrapper cart-flex-item">
-                                        <a href="#"><img class="cart__image" src="/frontend/assets/images/product-images/home7-product4.jpg" alt="Minerva Dress black"></a>
-                                    </td>
-                                    <td class="cart__meta small--text-left cart-flex-item">
-                                        <div class="list-view-item__title">
-                                            <a href="#">Minerva Dress black</a>
-                                        </div>
-                                    </td>
-                                    <td class="cart__price-wrapper cart-flex-item">
-                                        <span class="money">$526.00</span>
-                                    </td>
-                                    <td class="cart__update-wrapper cart-flex-item text-right">
-                                        <div class="cart__qty text-center">
-                                            <div class="qtyField">
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="icon icon-minus"></i></a>
-                                                <input class="cart__qty-input qty" type="text" name="updates[]" id="qty" value="1" pattern="[0-9]*">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="icon icon-plus"></i></a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right small--hide cart-price">
-                                        <div><span class="money">$735.00</span></div>
-                                    </td>
-                                    <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
-                                </tr>
                             </tbody>
                     		<tfoot>
                                 <tr>
-                                    <td colspan="3" class="text-left"><a href="http://annimexweb.com/" class="btn btn-secondary btn--small cart-continue">Continue shopping</a></td>
+                                    <td colspan="3" class="text-left"><a href="/" class="btn btn-secondary btn--small cart-continue">Tiếp Tục Mua Sắm</a></td>
                                     <td colspan="3" class="text-right">
-	                                    <button type="submit" name="clear" class="btn btn-secondary btn--small  small--hide">Clear Cart</button>
-                                    	<button type="submit" name="update" class="btn btn-secondary btn--small cart-continue ml-2">Update Cart</button>
+	                                    <button type="submit" name="clear" class="btn btn-secondary btn--small  small--hide">Xóa Tất Cả</button>
+                                    	<button type="submit" name="update" class="btn btn-secondary btn--small cart-continue ml-2">Cập Nhật</button>
                                     </td>
                                 </tr>
                             </tfoot>
-                    </table> 
-                    </form>                   
-               	</div>
-                
-                
-                <div class="container mt-4">
-                    <div class="row">
-                    	<div class="col-12 col-sm-12 col-md-4 col-lg-4 mb-4">
-                        	<h5>Discount Codes</h5>
-                            <form action="#" method="post">
+                    </table>
+                    
+                    <!-- <div class="currencymsg">We processes all orders in USD. While the content of your cart is currently displayed in USD, the checkout will use USD at the most current exchange rate.</div> -->
+                    <hr>
+					<!-- <div id="shipping-calculator" class="mb-4">
+                    	<h5 class="small--text-center">Get shipping estimates</h5>
+                        <div class="row">
+                        	<div class="col-12 col-sm-12 col-md-4">
                             	<div class="form-group">
-                                    <label for="address_zip">Enter your coupon code if you have one.</label>
-                                    <input type="text" name="coupon">
-                                </div>
-                                <div class="actionRow">
-                                    <div><input type="button" class="btn btn-secondary btn--small" value="Apply Coupon"></div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-4 col-lg-4 mb-4">
-                        	<h5>Estimate Shipping and Tax</h5>
-							<form action="#" method="post">
-                                <div class="form-group">
-                                    <label for="address_country">Country</label>
-                                    <select id="address_country" name="address[country]" data-default="United States"><option value="Belgium" data-provinces="[]">Belgium</option>
+                                	<label for="address_country">Country</label>
+                          			<select id="address_country" name="address[country]" data-default="United States"><option value="Belgium" data-provinces="[]">Belgium</option>
                                         <option value="---" data-provinces="[]">---</option>
                                         <option value="Afghanistan" data-provinces="[]">Afghanistan</option>
                                         <option value="Aland Islands" data-provinces="[]">Åland Islands</option>
@@ -304,11 +232,12 @@
                                         <option value="Yemen" data-provinces="[]">Yemen</option>
                                         <option value="Zambia" data-provinces="[]">Zambia</option>
                                         <option value="Zimbabwe" data-provinces="[]">Zimbabwe</option></select>
-                                </div>
-    
-                                <div class="form-group">
-                                    <label>State</label>
-                                    <select id="address_province" name="address[province]" data-default="">
+                            	</div>
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-4">
+                            	<div class="form-group">
+                                	<label>State</label>
+                          			<select id="address_province" name="address[province]" data-default="">
                                       <option value="Alabama">Alabama</option>
                                       <option value="Alaska">Alaska</option>
                                       <option value="American Samoa">American Samoa</option>
@@ -372,52 +301,60 @@
                                       <option value="Armed Forces Europe">Armed Forces Europe</option>
                                       <option value="Armed Forces Pacific">Armed Forces Pacific</option>
                                     </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="address_zip">Postal/Zip Code</label>
-                                    <input type="text" id="address_zip" name="address[zip]">
-                                </div>
-    
-                                <div class="actionRow">
-                                    <div><input type="button" class="btn btn-secondary btn--small" value="Calculate shipping"></div>
-                                </div>
-                            </form>
-                        </div>
-                        
-                        <div class="col-12 col-sm-12 col-md-4 col-lg-4 cart__footer">
-                            <div class="solid-border">	
-                              <div class="row border-bottom pb-2">
-                                <span class="col-12 col-sm-6 cart__subtotal-title">Subtotal</span>
-                                <span class="col-12 col-sm-6 text-right"><span class="money">$735.00</span></span>
-                              </div>
-                              <div class="row border-bottom pb-2 pt-2">
-                                <span class="col-12 col-sm-6 cart__subtotal-title">Tax</span>
-                                <span class="col-12 col-sm-6 text-right">$10.00</span>
-                              </div>
-                              <div class="row border-bottom pb-2 pt-2">
-                                <span class="col-12 col-sm-6 cart__subtotal-title">Shipping</span>
-                                <span class="col-12 col-sm-6 text-right">Free shipping</span>
-                              </div>
-                              <div class="row border-bottom pb-2 pt-2">
-                                <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Grand Total</strong></span>
-                                <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">$1001.00</span></span>
-                              </div>
-                              <div class="cart__shipping">Shipping &amp; taxes calculated at checkout</div>
-                              <p class="cart_tearm">
-                                <label>
-                                  <input type="checkbox" name="tearm" class="checkbox" value="tearm" required="">
-                                  I agree with the terms and conditions
-								</label>
-                              </p>
-                              <input type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Proceed To Checkout" disabled="disabled">
-                              <div class="paymnet-img"><img src="/frontend/assets/images/payment-img.jpg" alt="Payment"></div>
-                              <p><a href="#;">Checkout with Multiple Addresses</a></p>
+                            	</div>
                             </div>
-        
+                            <div class="col-12 col-sm-12 col-md-4">
+                            	<div class="form-group">
+                                	<label for="address_zip">Postal/Zip Code</label>
+                          			<input type="text" id="address_zip" name="address[zip]">
+                            	</div>
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-12 actionRow text-center">
+      							<div><input type="button" class="btn btn--secondary get-rates" value="Calculate shipping"></div>
+  							</div>
                         </div>
+                    </div>  -->
+                    
+                    </form>                   
+               	</div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 cart__footer">
+                    <!-- <h5>Mã Giảm Giá</h5>
+                    <form action="#" method="post">
+                        <div class="form-group">
+                            <label for="address_zip">Nhập Mã Giảm Giá Của Bạn Ở Đây (Nếu Có)</label>
+                            <input type="text" name="coupon">
+                        </div>
+                        <div class="actionRow">
+                            <div><input type="button" class="btn btn-secondary btn--small" value="Áp Dụng"></div>
+                        </div>
+                    </form>
+                    <br>
+                	<div class="cart-note">
+                    	<div class="solid-border">
+							<h5><label for="CartSpecialInstructions" class="cart-note__label small--text-center">Ghi Chú Cho Đơn Hàng Của Bạn</label></h5>
+							<textarea name="note" id="CartSpecialInstructions" class="cart-note__input"></textarea>
+						</div>
+                    </div> -->
+                    <div class="solid-border">
+                      <div class="row">
+                      	<span class="col-12 col-sm-6 cart__subtotal-title"><strong>Tổng Cộng</strong></span>
+                        <br>
+                        <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">$735.00</span></span>
+                      </div>
+                      <!-- <div class="cart__shipping">Shipping &amp; taxes calculated at checkout</div>
+                      <p class="cart_tearm">
+                        <label>
+                          <input type="checkbox" name="tearm" id="cartTearm" class="checkbox" value="tearm" required="">
+                           I agree with the terms and conditions</label>
+                      </p> -->
+                      <br>
+                      <td colspan="3" class="text-right"><a href="/thanh-toan" class="btn btn--small-wide">Thanh Toán</a></td>
+
+                      <!-- <button src="/checkout" src="/frontend/assets/images/payment-img.jpg" type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Thanh Toán"> -->
+                      <!-- <div class="paymnet-img"><img src="/frontend/assets/images/payment-img.jpg" alt="Payment"></div> -->
                     </div>
+
                 </div>
-                
             </div>
         </div>
         
