--- a/app/vviews/admin/html/footer.ejs
+++ b/app/vviews/admin/html/footer.ejs
@@ -2,8 +2,6 @@
     <strong>Copyright © 2022 <a href="">HuuDanhNguyen</a>.</strong>
     <!-- All rights reserved. -->
     <div class="float-right d-none d-sm-inline-block">
-        <!-- <b>Hotline 1:</b> 090 5744 470
-        ||
-        <b>Hotline 2:</b> 0383 308 983 -->
+        <b>Hotline 1:</b> 0362 234 331
     </div>
 </footer>
