--- a/app/vviews/ecommerce/pages/product/index.ejs
+++ b/app/vviews/ecommerce/pages/product/index.ejs
@@ -186,22 +186,23 @@
 			<!--End-product-single-->
 			<!--Product Fearure-->
 			<div class="prFeatures">
+				<br>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
 						<img src="/frontend/assets/images/credit-card.png" alt="Safe Payment" title="Safe Payment" />
-						<div class="details"><h3>Safe Payment</h3>Pay with the world's most payment methods.</div>
+						<div class="details"><h3>Thanh Toán An Toàn</h3>Thanh toán với nhiều hình thức khác nhau</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
 						<img src="/frontend/assets/images/shield.png" alt="Confidence" title="Confidence" />
-						<div class="details"><h3>Confidence</h3>Protection covers your purchase and personal data.</div>
+						<div class="details"><h3>Đảm Bảo Riêng Tư</h3>Bảo mật thông tin đơn hàng và thông tin cá nhân của bạn</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
 						<img src="/frontend/assets/images/worldwide.png" alt="Worldwide Delivery" title="Worldwide Delivery" />
-						<div class="details"><h3>Worldwide Delivery</h3>FREE &amp; fast shipping to over 200+ countries &amp; regions.</div>
+						<div class="details"><h3>Vận Chuyển Toàn Quốc</h3>Giao hàng nhanh toàn quốc</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
 						<img src="/frontend/assets/images/phone-call.png" alt="Hotline" title="Hotline" />
-						<div class="details"><h3>Hotline</h3>Talk to help line for your question on 4141 456 789, 4125 666 888</div>
+						<div class="details"><h3>Hotline 0362.234.331</h3>hỗ trợ từ 8h30 - 22h mỗi ngày</div>
 					</div>
 				</div>
 			</div>
@@ -516,8 +517,8 @@
 			<!--Recently Product Slider-->
 			<div class="related-product grid-products">
 					<header class="section-header">
-						<h2 class="section-header__title text-center h2"><span>Recently Viewed Product</span></h2>
-						<p class="sub-heading">You can manage this section from store admin as describe in above section</p>
+						<h2 class="section-header__title text-center h2"><span>SẢN PHẨM THỊNH HÀNH</span></h2>
+						<!-- <p class="sub-heading">You can manage this section from store admin as describe in above section</p> -->
 					</header>
 					<div class="productPageSlider">
 						<% listProductBestSeller.forEach((items)=> { %>
