--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -72,7 +72,7 @@
                 <img src="https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/296823838_1195016124677032_1056191576717981253_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SPpBKmF5DxMAX8QJt0g&tn=AFVsqyJQA7ank06i&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfACkEnIIMHyvlMqlyYS7UTv8Qjolu1KOM28qyLWcZBIvw&oe=6364D273" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Danh</a>
+                <a href="/adminCCC/dashboard" class="d-block">Danh</a>
             </div>
         </div>
 
