--- a/app/vviews/ecommerce/pages/search/index.ejs
+++ b/app/vviews/ecommerce/pages/search/index.ejs
@@ -1,5 +1,8 @@
 <% const collection="products" ; const folderUpload=`uploads/${collection}/`; %>
 <% include ../../../admin/helpers/userTimeInfo %>
+<% include ../../helpers/showProduct %>
+<% include ../../helpers/showProductSidebar %>
+
 <div id="page-content">
     <br>
     <div class="container">
@@ -29,8 +32,8 @@
                                         <li class="level2"><a href="#;" class="site-nav">View All Jewellery</a></li>
                                     </ul>
                                 </li> -->
-                                <% listCategory.slice(0,6).forEach((category)=> { %>
-                                    <li class="lvl-1"><a href="category/<%= category.id %>" class="site-nav"><%= category.name %></a></li>
+                                <% listCategory.forEach((category)=> { %>
+                                    <li class="lvl-1"><a href="/danh-muc/<%= category.id %>" class="site-nav"><%= category.name %></a></li>
                                 <%})%>
                                 <!-- <li class="lvl-1"><a href="#;" class="site-nav">Shoes</a></li> -->
 
@@ -65,17 +68,29 @@
                         <div class="widget-title"><h2>Kích Cỡ</h2></div>
                         <div class="filter-color swacth-list">
                             <ul>
-                                <li><span class="swacth-btn checked">X</span></li>
-                                <li><span class="swacth-btn">XL</span></li>
-                                <li><span class="swacth-btn">XLL</span></li>
-                                <li><span class="swacth-btn">M</span></li>
-                                <li><span class="swacth-btn">L</span></li>
-                                <li><span class="swacth-btn">S</span></li>
-                                <li><span class="swacth-btn">XXXL</span></li>
-                                <li><span class="swacth-btn">XXL</span></li>
-                                <li><span class="swacth-btn">XS</span></span></li>
-                            </ul>
-                        </div>
+
+
+                                <div>
+                                    <input type="radio" id="huey" name="drone" value="huey"
+                                           checked>
+                                    <label for="huey">XL</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="huey" name="drone" value="huey"
+                                           >
+                                    <label for="huey">L</label>
+                                </div>
+                              
+                                <div>
+                                    <input type="radio" id="dewey" name="drone" value="dewey">
+                                    <label for="dewey">M</label>
+                                </div>
+                              
+                                <div>
+                                    <input type="radio" id="louie" name="drone" value="louie">
+                                    <label for="louie">S</label>
+                                </div>
+                            </div>
                     </div>
                     <!--End Size Swatches-->
                     <!--Color Swatches-->
@@ -134,15 +149,15 @@
                         <div class="widget-content">
                             <div class="list list-sidebar-products">
                               <div class="grid">
-                                <% listProducts.forEach((items)=> { %>
+                                <% listProductNewArrivals.forEach((items)=> { %>
                                     <div class="grid__item">
                                         <div class="mini-list-item">
                                           <div class="mini-view_image">
-                                              <a class="grid-view-item__link" href="/product/<%= items.id %>">
-                                                  <img class="grid-view-item__image" src="/frontend/assets/images/product-images/mini-product-img.jpg" alt="" />
-                                              </a>
+                                              <a class="grid-view-item__link" href="/san-pham/<%= items.id %>">
+                                                <img class="grid-view-item__image" src="<%= folderUpload + items.images.split(",")[0]%>" alt="" />
+                                            </a>
                                           </div>
-                                          <div class="details"> <a class="grid-view-item__title" href="/product/<%= items.id %>"><%= items.name %></a>
+                                          <div class="details"> <a class="grid-view-item__title" href="/san-pham/<%= items.id %>"><%= items.name %></a>
                                             <div class="grid-view-item__meta"><span class="product-price__price"><span class="money"><%= items.price.toLocaleString() %> ₫ </span></span></div>
                                           </div>
                                         </div>
@@ -259,13 +274,9 @@
                                     <!-- start product image -->
                                     <div class="product-image">
                                         <!-- start product image -->
-                                        <a href="/product/<%= items.id %>">
-                                            <!-- image -->
-                                            <img class="primary blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image22.jpg" src="/frontend/assets/images/product-images/product-image22.jpg" alt="image" title="product" />
-                                            <!-- End image -->
-                                            <!-- Hover image -->
-                                            <img class="hover blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image22-1.jpg" src="/frontend/assets/images/product-images/product-image22-1.jpg" alt="image" title="product" />
-                                            <!-- End hover image -->
+                                        <a href="/san-pham/<%= items.id %>">
+                                            <%- imageMulti(items.images, folderUpload) %>  
+
                                         </a>
                                         <!-- end product image -->
     
