--- a/app/vviews/admin/helpers/showdiscountstatus.ejs
+++ b/app/vviews/admin/helpers/showdiscountstatus.ejs
@@ -1,17 +1,17 @@
 <%
     showDiscountStatus = (data) =>{
        if (!data) return
-       let time = data.split('-')
-       let timeStart = Date.parse(time[0])
-       let timeEnd = Date.parse(time[1])
+       let dates = data.split('-')
+       let timeStart = Date.parse(dates[0])
+       let timeEnd = Date.parse(dates[1])
        let timeNow = Date.now()
        let text = "Kêt Thúc"
        let button = "btn-danger"
        if (timeNow < timeStart){
-            text = "Unstarted"
+            text = "Sắp Hết"
             button = "btn-warning"
        } else if(timeNow < timeEnd){
-            text = "In Process"
+            text = "Đang Diễn Ra"
             button = "btn-success"
        } 
        return `<button type="button" class="btn btn-block ${button}" style="pointer-events: none;">${text}</button>`
