--- a/app/vviews/ecommerce/elements/footer.ejs
+++ b/app/vviews/ecommerce/elements/footer.ejs
@@ -15,7 +15,7 @@ const folderProductUpload 	= "uploads/products/";
                                     <div class="section-header text-center">
                                         <label class="h2"><span>Đăng Ký Để nhận </span>Thông Tin Từ Cửa Hàng</label>
                                     </div>
-                                    <form action="#" method="post">
+                                    <form id='newsletterForm' action="#" method="post">
                                         <div class="input-group">
                                             <input type="email" class="input-group__field newsletter__input" name="EMAIL" value="" placeholder="Địa Chỉ Email" required="">
                                             <span class="input-group__btn">
