--- a/app/vviews/ecommerce/elements/newArrivals.ejs
+++ b/app/vviews/ecommerce/elements/newArrivals.ejs
@@ -25,7 +25,7 @@
                             </a>
                             <!-- end product image -->
                             <!-- Start product button -->
-                            <form class="variants add" action="#" onclick="window.location.href='/add/<%= items.id %>'"method="post">
+                            <form class="variants add" action="#" onclick="window.location.href='/add-to-cart/'"method="post">
                                 <button class="btn btn-addto-cart" type="button" tabindex="0">Add To Cart</button>
                             </form>
                             <div class="button-set">
