--- a/app/vviews/admin/pages/coupons/list.ejs
+++ b/app/vviews/admin/pages/coupons/list.ejs
@@ -6,11 +6,12 @@
 <% include ./../../helpers/userTimeInfo %>
 <% include ./../../helpers/sortField %>
 <% include ./../../helpers/image %>
+<% include ./../../helpers/showdiscountstatus %>
+
 <% 
-	const collection = "contact";
+	const collection = "coupons";
 	const linkPrefix = systemConfig.prefixAdmin + `/${collection}/`;
 	const linkAjax = linkPrefix + 'ajax/';
-	const folderUpload 	= `uploads/${collection}/`;
 %>
 
 <%- locals.flash %>
@@ -54,7 +55,7 @@
 	<div class="card-body">
 		<!-- Control -->
 		<form action="" method="post" class="table-responsive" id="zt-form">
-			<!-- <%- actionHelper(collection) %> -->
+			<%- actionHelper(collection) %>
 
 			<!-- List Content -->
 		
@@ -69,14 +70,20 @@
 						</th>
 						<th class="text-center">#</a></th>
 						<th class="text-center sort">
-							<%- sortField(linkPrefix,'Tên','name',sort) %>
+							<%- sortField(linkPrefix,'Mã','name',sort) %>
 						</th>
-						<th class="text-center">Email</a></th>
-
+						<th class="text-center sort">
+							<%- sortField(linkPrefix,'Trị Giá','values',sort) %>
+						</th>
 						<th class="text-center">Trạng Thái</a></th>
-						<!-- <th class="text-center sort">
-							<%- sortField(linkPrefix,'Ordering','ordering',sort) %>
-						</th> -->
+						<th class="text-center sort">
+							<%- sortField(linkPrefix,'Số Lượng','quantity',sort) %>
+						</th>
+						<th class="text-center sort">
+							<%- sortField(linkPrefix,'Đã Dùng','used',sort) %>
+						</th>
+						<th class="text-center">Thời Gian</th>
+						<th class="text-center">Thời Gian</th>
 						<th class="text-center">Thao Tác</th>
 					</tr>
 				</thead>
@@ -93,11 +100,25 @@
 						</td>
 						<td class="text-center"><%= index+1 %></td>
 						<td class="text-center"><%- highlightHelper(item.name, keyword) %></td>
-						<td class="text-center"><%- highlightHelper(item.email, keyword) %></td>
+						<td class="text-center"><%= item.values.toLocaleString() %><%= item.type === 'percent' ? '%' : 'đ' %></td>
 						<td class="text-center position-relative" id="<%= item.id %>-status">
 							<%- statusHelper(collection, item.status, item.id) %>
 						</td>
-					
+						<td class="text-center position-relative">
+							<input type="number" value="<%= item.quantity %>" class="text-center ordering" onChange="handleAjax(
+								'<%= linkAjax %>',
+								'quantity',
+								'<%= item.id %>',
+								this
+								)">
+						</td>
+						<td class="text-center"><%= item.used %></td>
+						<td class="text-center">
+							<input type="text" class="form-control float-right" id="reservation" name="dates" value="<%= item.dates ?? null %>" disabled>
+						</td>
+						<td class="text-center position-relative" id="discountstatus-item-<%= item.id %>">
+							<%- showDiscountStatus(item.dates) %>
+					  </td>
 						<td class="text-center">
 							<a href="<%= linkPrefix %>form/<%= item.id %>" class="rounded-circle btn btn-sm btn-info" title="Edit">
 								<i class="fas fa-pencil-alt"></i>
