--- a/app/vviews/admin/pages/products/form.ejs
+++ b/app/vviews/admin/pages/products/form.ejs
@@ -51,8 +51,13 @@
 								<%- `<span class="error invalid-feedback">${errors.slug}</span>` %>
 							</div>
 							<div class="form-group">
-								<label for="slug">Giá</label>
+								<label for="price">Giá</label>
 								<input type="number" name="price" value="<%= item.price %>" class="form-control form-control-sm <%= errors.price && 'is-invalid' %>">
+								<%- `<span class="error invalid-feedback">${errors.price}</span>` %>
+							</div>
+							<div class="form-group">
+								<label for="priceDiscount">Giá Khuyến Mãi</label>
+								<input type="number" name="priceDiscount" value="<%= item.priceDiscount %>" class="form-control form-control-sm <%= errors.price && 'is-invalid' %>">
 								<%- `<span class="error invalid-feedback">${errors.price}</span>` %>
 							</div>
 							<div class="form-group">
