--- a/app/vviews/admin/pages/users/list.ejs
+++ b/app/vviews/admin/pages/users/list.ejs
@@ -110,7 +110,7 @@
 						<td class="text-center">
 							<%- showUserTimeInfo(item.updatedAt) %>
 						</td> -->
-						<!-- <td class="text-center">
+						<td class="text-center">
 							<a href="<%= linkPrefix %>form/<%= item.id %>" class="rounded-circle btn btn-sm btn-info" title="Edit">
 								<i class="fas fa-pencil-alt"></i>
 							</a>
@@ -118,7 +118,7 @@
 							<a class="rounded-circle btn btn-sm btn-danger btn-delete" title="Delete" data-toggle="modal" href="#exampleModal" data-url='<%= linkPrefix %>delete/<%= item.id %>'>
 								<i class="fas fa-trash-alt"></i>
 							</a>
-						</td> -->
+						</td>
 					</tr>
 					<% }) %>
 					
