--- a/app/vviews/ecommerce/pages/user/signin.ejs
+++ b/app/vviews/ecommerce/pages/user/signin.ejs
@@ -11,18 +11,18 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 main-col offset-md-3">
                 <div class="mb-4">
-                   <form method="post" action="#" id="CustomerLoginForm" accept-charset="UTF-8" class="contact-form">	
+                   <form method="post" action="/user/signin" id="CustomerLoginForm" accept-charset="UTF-8" class="contact-form">	
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="CustomerEmail">Email</label>
-                                <input type="email" name="customer[email]" placeholder="" id="CustomerEmail" class="" autocorrect="off" autocapitalize="off" autofocus="">
+                                <input type="email" name="email" placeholder="" id="CustomerEmail" class="" autocorrect="off" autocapitalize="off" autofocus="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="CustomerPassword">Mật Khẩu</label>
-                                <input type="password" value="" name="customer[password]" placeholder="" id="CustomerPassword" class="">                        	
+                                <input type="password" value="" name="password" placeholder="" id="CustomerPassword" class="">                        	
                             </div>
                         </div>
                       </div>
