--- a/app/vviews/ecommerce/pages/checkout/index.ejs
+++ b/app/vviews/ecommerce/pages/checkout/index.ejs
@@ -221,9 +221,9 @@
                         <hr />
 
                         <div class="your-payment">
-                            <h2 class="payment-title mb-3">payment method</h2>
+                            <!-- <h2 class="payment-title mb-3">payment method</h2> -->
                             <div class="payment-method">
-                                <div class="payment-accordion">
+                                <!-- <div class="payment-accordion">
                                     <div id="accordion" class="payment-section">
                                         <div class="card mb-2">
                                             <div class="card-header">
@@ -303,7 +303,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="order-button-payment">
                                     <button class="btn" value="Place order" type="submit">Place order</button>
