--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -153,7 +153,14 @@
         <div class="site-cart">
           <a href="#" class="site-header__cart" title="Cart">
             <i class="icon anm anm-bag-l"></i>
-            <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">2</span>
+            <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">
+              <% if (typeof cart !=="undefined") { %>
+                <%= cart.length %>
+                <% } else { %>
+                  0
+              <% } %>
+               
+            </span>
           </a>
           <!--Minicart Popup-->
           <div id="header-cart" class="block block-cart">
