--- a/app/vviews/ecommerce/pages/contact/index.ejs
+++ b/app/vviews/ecommerce/pages/contact/index.ejs
@@ -9,15 +9,6 @@
         <!--End Page Title-->
         <div class="map-section map">
         	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.448887950405!2d106.7507973!3d10.853422499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752795bb58b8e7%3A0x6041d18e429beb50!2zMTkgxJDGsOG7nW5nIHPhu5EgMTQsIExpbmggxJDDtG5nLCBUaOG7pyDEkOG7qWMsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaA!5e0!3m2!1svi!2s!4v1666878063850!5m2!1svi!2s" height="350" allowfullscreen></iframe>
-            <div class="container">
-            	<div class="row">
-                	<div class="map-section__overlay-wrapper">
-                        <div class="map-section__overlay">
-                            <p><a href="https://goo.gl/maps/xG7iKiCH3QrZZW2j7" class="btn btn--secondary btn--small" target="_blank">Chỉ Đường</a></p>
-                        </div>
-                   	</div>
-                </div>
-            </div>
         </div>
         <div class="bredcrumbWrap">
             <div class="container breadcrumbs">
@@ -65,8 +56,8 @@
                         </div>  
                       </div>
                       <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <input type="submit" class="btn" value="Gửi">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 submitButton">
+                            <input type="submit" class="btn" value="Send Message">
                         </div>
                      </div>
                      </form>
