--- a/app/vviews/admin/pages/contact/form.ejs
+++ b/app/vviews/admin/pages/contact/form.ejs
@@ -19,7 +19,7 @@
 			<div class="form-group row">
 				<label for="email" class="col-sm-2 col-form-label text-sm-right required">Email</label>
 				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="email" value="<%= item.name %>" class="form-control form-control-sm">
+					<input type="text" name="email" value="<%= item.email %>" class="form-control form-control-sm">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -31,13 +31,13 @@
 			<div class="form-group row">
 				<label for="message" class="col-sm-2 col-form-label text-sm-right required">Nội Dung Tin Nhắn</label>
 				<div class="col-xs-12 col-sm-8">
-                    <textarea type="text" id="message-input-form" name="message" value="<%= item.message %>" class="form-control form-control-sm"></textarea>
+                    <textarea type="text" id="message-input-form" name="message" value="<%= item.message %>" class="form-control form-control-sm"><%= item.message %></textarea>
 				</div>
 			</div>
 			
 
 			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Trạng Thái</label>
 				<div class="col-xs-12 col-sm-8">
 					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
 						<option value="novalue">Chọn Trạng Thái</option>
