--- a/app/vviews/admin/pages/dashboard/index.ejs
+++ b/app/vviews/admin/pages/dashboard/index.ejs
@@ -29,7 +29,7 @@
 %>
 <%- xhtmlBox %>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col">
             <div class="card">
                 <div class="card-header border-transparent">
                     <h3 class="card-title">Đơn Hàng Mới Nhất</h3>
@@ -108,7 +108,7 @@
         
             </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
                 <h3 class="card-title">Latest Members</h3>
@@ -174,6 +174,6 @@
                 </div>
                 
             </div>
-        </div>
+        </div> -->
     </div>
     
