--- a/app/vviews/admin/pages/products/list.ejs
+++ b/app/vviews/admin/pages/products/list.ejs
@@ -84,13 +84,14 @@
 						<!-- <th class="text-center">Image</th> -->
 						<th class="text-center">Hình Ảnh</a></th>
 						<th class="text-center">Giá</a></th>
+						<th class="text-center">Giá Khuyến Mãi</a></th>
 						<th class="text-center">Trạng Thái</a></th>
 						<!-- <th class="text-center">Option</a></th> -->
-						<th class="text-center sort">
+						<!-- <th class="text-center sort">
 							<%- sortField(linkPrefix,'Thứ Tự','ordering',sort) %>
-						</th>
+						</th> -->
 						<!-- <th class="text-center">Created</a></th> -->
-						<th class="text-center">Chỉnh Sửa</a></th>
+						<!-- <th class="text-center">Chỉnh Sửa</a></th> -->
 						<th class="text-center">Thao Tác</th>
 					</tr>
 				</thead>
@@ -110,6 +111,7 @@
 						<td class="text-center position-relative"><%- selectCategory(listCategory,item.categoriesId,'list',null,linkAjax,item.id) %></td>
 						<td class="text-center"><%- imageHelper(folderUpload, item.images, item.slug); %></td>
 						<td class="text-center"><%- highlightHelper(item.price.toLocaleString(), keyword) %> ₫</td>
+						<td class="text-center"><%- highlightHelper(item.priceDiscount.toLocaleString(), keyword) %> ₫</td>
 						<td class="text-center position-relative" id="<%= item.id %>-status">
 							<%- statusHelper(collection, item.status, item.id) %>
 						</td>
@@ -119,20 +121,20 @@
 							</div>
 						</td> -->
 						
-						<td class="text-center position-relative">
+						<!-- <td class="text-center position-relative">
 							<input type="number" value="<%= item.ordering %>" class="text-center ordering" onChange="handleAjax(
 								'<%= linkAjax %>',
 								'ordering',
 								'<%= item.id %>',
 								this
 								)">
-						</td>
+						</td> -->
 						<!-- <td class="text-center">
 							<%- showUserTimeInfo(item.createdAt) %>
 						</td> -->
-						<td class="text-center">
+						<!-- <td class="text-center">
 							<%- showUserTimeInfo(item.updatedAt) %>
-						</td>
+						</td> -->
 						<td class="text-center">
 							<a href="<%= linkPrefix %>form/<%= item.id %>" class="rounded-circle btn btn-sm btn-info" title="Edit">
 								<i class="fas fa-pencil-alt"></i>
