--- a/app/vviews/ecommerce/pages/user/signup.ejs
+++ b/app/vviews/ecommerce/pages/user/signup.ejs
@@ -1,3 +1,7 @@
+<%#
+	errors=errors ?? {};
+
+%>
 <div id="page-content">
     <!--Page Title-->
     <div class="page section-header text-center">
@@ -13,28 +17,23 @@
                 <div class="mb-4">
                    <form method="post" action="/user/signup" id="CustomerLog inForm" accept-charset="UTF-8" class="contact-form">	
                       <div class="row">
-                          <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <div class="form-group">
-                                <label for="FirstName">Họ</label>
-                                <input type="text" name="customer[first_name]" placeholder="" id="FirstName" autofocus="">
-                            </div>
-                           </div>
                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
-                                <label for="LastName">Tên</label>
-                                <input type="text" name="customer[last_name]" placeholder="" id="LastName">
+                              <label for="CustomerEmail">Tên</label>
+                              <input type="username" name="username" placeholder="" id="CustomerName" class="<%# errors.username && 'is-invalid' %>" autocorrect="off" autocapitalize="off" autofocus="">
+                              <%# `<span class="error invalid-feedback">${errors.username}</span>` %>
                             </div>
-                           </div> -->
+                        </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="CustomerEmail">Email</label>
-                                <input type="email" name="email" placeholder="" id="CustomerEmail" class="" autocorrect="off" autocapitalize="off" autofocus="">
+                                <input type="email" name="email" placeholder="" id="CustomerEmail" class="" autocorrect="off" autocapitalize="off" autofocus=""required>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="CustomerPassword">Mật Khẩu</label>
-                                <input type="password" value="" name="password" placeholder="" id="CustomerPassword" class="">                        	
+                                <input type="password" value="" name="password" placeholder="" id="CustomerPassword" class=""required>                        	
                             </div>
                         </div>
                       </div>
