--- a/app/vviews/admin/pages/coupons/list.ejs
+++ b/app/vviews/admin/pages/coupons/list.ejs
@@ -82,8 +82,8 @@
 						<th class="text-center sort">
 							<%- sortField(linkPrefix,'Đã Dùng','used',sort) %>
 						</th>
-						<th class="text-center">Thời Hạn</th>
-						<th class="text-center">Tình Trạng</th>
+						<th class="text-center">Thời Gian</th>
+						<th class="text-center">Thời Gian</th>
 						<th class="text-center">Thao Tác</th>
 					</tr>
 				</thead>
