--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -1,10 +1,7 @@
 <% include ../../helpers/showProductCategory %>
-<% include ../../helpers/showcategoryfilter %>
 <% 
 	const collection = "products";
 	const folderUpload 	= `uploads/${collection}/`;
-    let paramPrice = (objRangePrice.maxPrice && objRangePrice.minPrice) ? `minPrice=${objRangePrice.minPrice}&maxPrice=${objRangePrice.maxPrice}&` : ''
-
 %>
 <div id="page-content">
     <br>
@@ -35,8 +32,7 @@
                                         <li class="level2"><a href="#;" class="site-nav">View All Jewellery</a></li>
                                     </ul>
                                 </li> -->
-                                    <!-- <%- showCategoryFilter(listCategory) %> -->
-                                <% listCategory.forEach((category)=> { %>
+                                <% listCategory.slice(0,6).forEach((category)=> { %>
                                     <li class="lvl-1"><a href="<%= category.id %>" class="site-nav"><%= category.name %></a></li>
                                 <%})%>
                                 <!-- <li class="lvl-1"><a href="#;" class="site-nav">Shoes</a></li> -->
@@ -226,6 +222,11 @@
             <!--End Sidebar-->
             <!--Main Content-->
             <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
+                <!-- <div class="category-description">
+                    <h3>Category Description</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing.</p>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                </div> -->
                 <hr>
                 <div class="productList">
                     <!--Toolbar-->
@@ -249,10 +250,13 @@
                                           <label for="SortBy" class="hidden">Lọc</label>
                                           <select name="SortBy" id="SortBy" class="filters-toolbar__input filters-toolbar__input--sort">
                                             <option value="title-ascending" selected="selected">Lọc</option>
-                                            <option><a href="/<%=itemsInCategory.id%>?<%=paramPrice%>sort=price%2casc" data-type="price,asc">Giá, Thấp Đến Cao</a></option>
-                                            <option><a href="/<%=itemsInCategory.id%>?<%=paramPrice%>sort=price%2cdesc" data-type="price,desc">Giá, Cao Đến Thấp</a></option>
-        
-                                            <!-- <option>Giá, Thấp Đến Cao</option> -->
+                                            <!-- <option>Best Selling</option> -->
+                                            <option>Theo Thứ Tự, A-Z</option>
+                                            <option>Theo Thứ Tự, Z-A</option>
+                                            <option>Giá, Thấp Đến Cao</option>
+                                            <option>Giá, Cao Đến Thấp</option>
+                                            <option>Ngày, Mới Tới Cũ</option>
+                                            <option>Ngày, Cũ Tới Mới</option>
                                           </select>
                                           <input class="collection-header__default-sort" type="hidden" value="manual">
                                     </div>
