--- a/app/vviews/ecommerce/pages/blogArticle/index.ejs
+++ b/app/vviews/ecommerce/pages/blogArticle/index.ejs
@@ -2,6 +2,8 @@
 const folderProductUpload='uploads/products/';
 %>
 <% include ../../helpers/showProductSidebar %>
+<% include ../../helpers/formattime %>
+
  
   <!--Body Content-->
     <div id="page-content">
@@ -22,12 +24,13 @@ const folderProductUpload='uploads/products/';
                 <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
                     <div class="blog--list-view">
                     	<div class="article"> 
+                        <%= JSON.stringify(itemBlog.) %> 
                             <!-- Article Image --> 
                              <!-- <a class="article_featured-image" href="#"><img class="blur-up lazyload" data-src="<%= folderUpload + itemBlog.thumbnail %>" src="<%= folderUpload + itemBlog.thumbnail %>" alt="It's all about how you wear"></a>  -->
                             <h1><a href="/chi-tiet-bai-viet/<%= itemBlog.id %>"><%= itemBlog.title %> </a></h1>
                             <ul class="publish-detail">                      
                                 <li><i class="anm anm-user-al" aria-hidden="true"></i>  User</li>
-                                <li><i class="icon anm anm-clock-r"></i> <time datetime="2017-05-02">May 02, 2017</time></li>
+                                <li><i class="icon anm anm-clock-r"></i> <time datetime="2017-05-02"><%- formatTime(itemBlog.createdAt) %></time></li>
                                 <!-- <li>
                                     <ul class="inline-list">   
                                         <li><i class="icon anm anm-comments-l"></i> <a href="#"> 0 comments</a></li>
