--- a/app/vviews/ecommerce/elements/script.ejs
+++ b/app/vviews/ecommerce/elements/script.ejs
@@ -11,6 +11,9 @@
  <script src="/frontend/assets/js/main.js"></script>
  <script src="/adminlte/js/ajax.js"></script>
  <script src="/plugins/toastr/toastr.min.js"></script>
+ <script src="/frontend/assets/js/sliderRange.js"></script>
+ 
+
 
  <!-- Photoswipe Gallery -->
  <script src="/frontend/assets/js/vendor/photoswipe.min.js"></script>
